--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,71 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html {
+  font-family: "Inter", sans-serif;
+}
+body {
+  font-family: "Inter", sans-serif;
+  box-sizing: border-box;
+}
+
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+}
+
+.navbar {
+  background: #f55a5a;
+  color: #ffffff;
+  height: 3rem;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-content: center;
+  user-select: none;
+}
+
+.navbar i {
+  margin-right: 0.5rem;
+}
+
+.content {
+  margin: 2rem 18rem;
+}
+
+.row img {
+  border-radius: 5px;
+}
+
+.text-content {
+  padding-top: 1rem;
+}
+.location i {
+  color: #f55a5a;
+  margin-right: 0.3rem;
+}
+.location span {
+  text-transform: uppercase;
+  line-height: 12.39px;
+  letter-spacing: 2px;
+  color: #2b283a;
+  margin-right: 0.5rem;
+  font-weight: 400;
+}
+
+.location a {
+  color: #918e9b;
+}
+
+.text-content h1 {
+  font-weight: 700;
+  color: #2b283a;
+  font-size: 25px;
+  line-height: 30.26px;
 }
